356
Since 2.7.1 the first error message is
```scala
<console>:4: error: illegal inheritance from final trait Nothing
       class Foo extends Nothing { val x = 4 }
                         ^
```
which seems abundantly clear, so I am closing.
